assignments/PA4/tests/bad/bad21.cl
class M {
    main(x:Int):Int{1};
};
class Main inherits M {
    main(x:Int):Int{1};
};
